--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ time, mark, audio, video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
+  box-sizing: border-box;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -59,14 +60,91 @@ table {
 
 .card-wrapper {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-around;
   flex-wrap: wrap;
+  background-color: rgb(42, 5, 87);
 }
 .card-wrapper .card {
-  width: 200px;
-  background-color: rgb(42, 5, 87);
+  box-shadow: 3px 3px rgb(0, 60, 255), -1em 0 0.4em olive;
+  text-transform: capitalize;
+  padding: 10px 0;
+  width: 400px;
+  font-family: "Tagesschrift", system-ui;
+  font-weight: 700;
+  font-style: normal;
+  font-size: 26px;
+  color: rgb(211, 221, 230);
+  transition: 0.3s;
 }
 .card-wrapper .card img {
   width: 100%;
+  height: 250px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.card-wrapper .card a {
+  text-transform: capitalize;
+  color: inherit;
+  display: block;
+}
+.card-wrapper .card button {
+  font-size: 20px;
+  background: none;
+  color: rgb(211, 221, 230);
+  cursor: pointer;
+  border: none;
+  text-decoration: underline;
+  text-transform: capitalize;
+}
+.card-wrapper .card h2,
+.card-wrapper .card p,
+.card-wrapper .card ul,
+.card-wrapper .card a {
+  display: none;
+}
+.card-wrapper .card:hover {
+  transform: scale(1.03);
+}
+
+.modal-wrapper {
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  position: fixed;
+  inset: 0;
+  background: rgba(52, 43, 106, 0.1725490196);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
+  display: none;
+}
+.modal-wrapper.visible {
+  display: flex;
+}
+.modal-wrapper .modal-content {
+  box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset, rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset, rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset, rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
+  border-radius: 20px;
+  text-transform: capitalize;
+  text-shadow: 1px 1px 2px rgb(11, 11, 11);
+  font-size: 28px;
+  width: 600px;
+  background: inherit;
+  color: rgb(211, 221, 230);
+}
+.modal-wrapper .modal-content img {
+  width: 100%;
+}
+.modal-wrapper .modal-content button {
+  text-transform: capitalize;
+  display: none;
+}
+.modal-wrapper .modal-content a {
+  color: rgb(211, 221, 230);
+  text-decoration: none;
+}
+.modal-wrapper .modal-close {
+  position: absolute;
+  font-size: 50px;
+  top: 30px;
+  right: 30px;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
