--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -3,14 +3,97 @@
 
 .card-wrapper {
   @include flex;
-  @include justify-csb;
-  @include align-items-c;
+  @include justify-csa;
   @include flex-wrap;
+  background-color: $bgColor;
+
   .card {
+    box-shadow:
+    3px 3px rgb(0, 60, 255),
+    -1em 0 0.4em olive;
+    text-transform: capitalize;
+    padding: 10px 0;
     width: $cardWidth;
-    background-color: $bgColor;
+    font-family: "Tagesschrift", system-ui;
+    font-weight: 700;
+    font-style: normal;
+    font-size: $cardFontSize;
+    color: $textColor;
+    transition: 0.3s;
+    img {
+      width: 100%;
+      height: 250px;
+      object-fit: cover;
+    }
+    a {
+      text-transform: capitalize;
+      color: inherit;
+      display: block;
+    }
+    button {
+      font-size: 20px;
+      background: none;
+      color: $textColor;
+      cursor: pointer;
+      border: none;
+      text-decoration: underline;
+      text-transform: capitalize;
+      
+    }
+    h2,
+    p,
+    ul,
+    a {
+      display: none;
+    }
+    &:hover {
+      transform: scale(1.03);
+    }
+  }
+}
+.modal-wrapper {
+  @include justify-cc;
+  @include align-items-c;
+  height: 100vh;
+  position: fixed;
+  inset: 0;
+  background: #342b6a2c;
+  backdrop-filter: blur(10px);
+  display: none;
+  &.visible {
+    @include flex;
+  }
+  .modal-content {
+    box-shadow: rgba(0, 0, 0, 0.17) 0px -23px 25px 0px inset,
+      rgba(0, 0, 0, 0.15) 0px -36px 30px 0px inset,
+      rgba(0, 0, 0, 0.1) 0px -79px 40px 0px inset,
+      rgba(0, 0, 0, 0.06) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px,
+      rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px,
+      rgba(0, 0, 0, 0.09) 0px 32px 16px;
+    border-radius: 20px;
+    text-transform: capitalize;
+    text-shadow: 1px 1px 2px rgb(11, 11, 11);
+    font-size: 28px;
+    width: 600px;
+    background: inherit;
+    color: $textColor;
     img {
       width: 100%;
     }
+    button {
+      text-transform: capitalize;
+      display: none;
+    }
+    a {
+      color: $textColor;
+      text-decoration: none;
+    }
+  }
+  .modal-close {
+    position: absolute;
+    font-size: 50px;
+    top: 30px;
+    right: 30px;
+    cursor: pointer;
   }
 }
