--- a/sass/utilities/_main.scss
+++ b/sass/utilities/_main.scss
@@ -7,6 +7,9 @@
 @mixin justify-csb {
   justify-content: space-between;
 }
+@mixin justify-csa {
+  justify-content: space-around;
+}
 @mixin align-items-c {
   align-items: center;
 }
